vm setup dependency

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,3 +8,9 @@ colorguard:
 rex:
     script: "angr-test rex"
     tags: [angr]
+
+update_vm_image:
+    only: ["master"]
+    script:
+    - update-vm-image
+    tags: ["docker-builder"]
