--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "boolector"]
 	path = boolector
-	url = git@git.seclab.cs.ucsb.edu:cgc/boolector.git
+	url = https://github.com/mechaphish/cgc-boolector
